로직 변경.